--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -119,7 +119,7 @@ header {
 	> .slider-item
 	> .container
 	> .row
-	> .col-6
+	> .col-md-6
 	> .slide-item-content {
 	height: 438px;
 	width: 100%;
@@ -132,7 +132,7 @@ header {
 	> .slider-item
 	> .container
 	> .row
-	> .col-6
+	> .col-md-6
 	> .slide-item-content
 	> .slide-item-title {
 	font-family: Roboto;
@@ -150,7 +150,7 @@ header {
 	> .slider-item
 	> .container
 	> .row
-	> .col-6
+	> .col-md-6
 	> .slide-item-content
 	> .slide-item-text {
 	font-family: Roboto;
@@ -216,7 +216,7 @@ header {
 	> .slider-item
 	> .container
 	> .row
-	> .col-4
+	> .col-md-4
 	> .slide-item-content
 	> .slide-item-title {
 	font-family: Roboto;
@@ -233,7 +233,7 @@ header {
 	> .slider-item
 	> .container
 	> .row
-	> .col-4
+	> .col-md-4
 	> .slide-item-content
 	> .slide-item-text {
 	font-family: Roboto;
@@ -265,17 +265,27 @@ header {
 	width: 100%;
 	height: 612px;
 }
-
+.h-100 {
+	height: 100%;
+}
 .section-userSign > .container > .row {
 	height: 100%;
 }
 .section-userSign > .container {
 	height: 100%;
-	width: 100%;
 }
-.section-userSign > .container > .row > .slide-float-image-wrapper {
+.section-userSign > .container > .d-flex > .slide-float-image-wrapper {
 	position: relative;
 	height: 100%;
+	margin-top: auto;
+}
+.section-userSign > .container > .d-flex > .slide-float-image-wrapper > img {
+	width: 448px;
+	height: 482px;
+	margin-top: auto;
+}
+.section-userSign > .container > .d-flex > .d-flex {
+	width: 50% !important;
 }
 
 .section-userSign > .container > .row > .slide-float-image-wrapper > img {
@@ -287,6 +297,7 @@ header {
 	margin-top: 96px;
 	height: 262px;
 	color: var(--white);
+	max-width: 100%;
 }
 
 .slider-third .slider-letter-title {
