--- a/src/css/style.css
+++ b/src/css/style.css
@@ -431,3 +431,5 @@ footer > .container-inner {
 	> .swiper-pagination-bullet:not(.swiper-pagination-bullet-active) {
 	background-color: #fff;
 }
+
+/*third slider*/
