--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -215,4 +215,54 @@
 	.row > * {
 		padding: 0 !important;
 	}
+
+	.slider-first {
+		height: 711px;
+	}
+	.slider-item > .container > .row > .flex-wrap {
+		height: auto;
+	}
+	.slider-item > .container > .row > .slide-float-image-wrapper img {
+		max-width: 282px;
+		position: relative !important;
+		left: 24px !important;
+	}
+	.slider-item > .container > .row > .slide-float-image-wrapper {
+		height: 449px;
+		display: flex;
+		margin-top: auto;
+		justify-content: center;
+	}
+	.slider-first
+		> .slider-wrapper
+		> .slider-item
+		> .container
+		> .row
+		> .col-md-6
+		> .slide-item-content {
+		height: auto;
+	}
+	.slide-item-content > .slide-item-button-group {
+		display: none !important;
+	}
+
+	.slide-item-title {
+		font-size: 40px !important;
+		margin: 0 auto;
+		margin-bottom: 8px !important;
+		margin-top: 60px !important;
+	}
+	.slide-item-text {
+		font-size: 17px !important;
+		line-height: 19px !important;
+		text-align: center !important;
+		max-width: 315px;
+		margin: 0 auto;
+		margin-bottom: 21px !important;
+	}
+
+	.slider-first > .swiper-pagination {
+		top: 27px;
+		bottom: auto;
+	}
 }
