--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -21,6 +21,16 @@
 	.slider-second {
 		height: auto;
 	}
+	.section-about > .swiper-pagination {
+		bottom: 28px;
+	}
+	.slider-second .swiper-pagination-bullet {
+		background-color: #fff;
+		opacity: 1;
+	}
+	.slider-second .swiper-pagination-bullet-active {
+		background-color: var(--green);
+	}
 	.slider-item
 		> .container
 		> .row
@@ -55,7 +65,9 @@
 	.menu-wrapper {
 		display: none !important;
 	}
-
+	.menu-burger__header {
+		display: block;
+	}
 	.align-text-start,
 	.align-text-end {
 		text-align: center !important;
@@ -76,11 +88,13 @@
 		text-align-last: center;
 	}
 	.img-under {
-		max-height: 316px;
 		margin-top: auto;
 	}
 	.img-upper {
-		max-width: 81px;
+		max-width: 120px;
+		left: 36%;
+		z-index: 999;
+		top: -26px;
 	}
 	.slider-third {
 		max-width: 100%;
@@ -271,7 +285,7 @@
 	}
 
 	.slider-first {
-		height: 711px;
+		height: 752px;
 	}
 	.slider-item > .container > .row > .flex-wrap {
 		height: auto;
@@ -309,6 +323,7 @@
 		margin-top: auto;
 		justify-content: center;
 		position: relative !important;
+		height: 455px;
 	}
 	.second-first
 		> .slider-wrapper
@@ -330,7 +345,16 @@
 		> .slide-item-content {
 		height: auto;
 	}
-
+	.slider-first
+		> .slider-wrapper
+		> .slider-item
+		> .container
+		> .row
+		> .slide-float-image-wrapper
+		img {
+		max-height: 452px;
+		left: 36px;
+	}
 	.slide-item-title {
 		font-size: 40px !important;
 		margin: 0 auto;
@@ -341,7 +365,7 @@
 		font-size: 17px !important;
 		line-height: 19px !important;
 		text-align: center !important;
-		max-width: 254px;
+		max-width: 280px;
 		margin: 0 auto;
 		margin-bottom: 21px !important;
 	}
@@ -386,6 +410,29 @@
 		font-size: 18px;
 		line-height: 19px;
 		min-height: 76px;
+	}
+
+	header.mobile.open {
+		height: 100vh !important;
+		width: 100%;
+		z-index: 999999;
+		position: fixed;
+	}
+	header.mobile.open .menu-wrapper > ul > li {
+		width: 100%;
+		text-align: left !important;
+		margin: 0 !important;
+		margin-left: 16px !important;
+		margin-top: 37px !important;
+	}
+
+	header.mobile.open .menu-wrapper {
+		display: flex !important;
+	}
+	header.mobile.open .icon-wrapper {
+		display: flex !important;
+		margin: 0 auto;
+		margin-top: 90px;
 	}
 }
 
