--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -53,6 +53,45 @@
 		margin-bottom: 0;
 		bottom: 0;
 	}
+
+	.slider-item-container {
+		width: 100%;
+		max-width: 100%;
+		margin: 0;
+		padding: 0;
+	}
+	.slider-item-container > .row {
+		width: 100%;
+		margin: 0;
+		padding: 0;
+	}
+
+	.step-right-content {
+		flex-wrap: wrap;
+		min-width: 100%;
+		margin: 0;
+	}
+	.step-image-wrapper {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin: 0;
+		width: 100%;
+		height: 369px;
+	}
+	.step-number-img {
+		left: 28%;
+		transform: translateX(24%);
+		top: 40px;
+		z-index: 1000;
+		width: 95px;
+		height: 95px;
+	}
+	.step-main-img {
+		max-width: none;
+		height: calc(100% - 60px);
+		margin-top: 120px;
+	}
 }
 @media only screen and (max-width: 998px) {
 	header {
