check image in safari

--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -271,7 +271,7 @@
 		margin-top: 57px;
 	}
 	.section-application img {
-		max-width: 311px;
+		max-height: 390px;
 	}
 	.btn-partner {
 		font-size: 20px;
