--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -650,7 +650,7 @@ footer {
 	transition: display 0.4s;
 }
 .modal-wrapper {
-	position: relative;
+	position: absolute;
 	width: 100%;
 	height: 100%;
 	display: -webkit-box;
@@ -659,9 +659,7 @@ footer {
 	-webkit-box-pack: center;
 	-ms-flex-pack: center;
 	justify-content: center;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
-	align-items: center;
+	overflow-y: auto;
 }
 .modal > .shadow {
 	z-index: 9999;
@@ -672,6 +670,9 @@ footer {
 	background-color: #fff;
 	border-radius: 7px;
 	z-index: 999999;
+	margin-top: 6%;
+	margin-bottom: 120px;
+	height: fit-content;
 }
 .modal-success {
 	display: -webkit-box;
