--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -631,12 +631,13 @@ footer {
 }
 .step-number-img {
 	height: 154px;
-	top: 134px;
+	top: 114px;
 	left: -78px;
 	position: absolute;
 }
 .step-main-img {
 	max-width: 100%;
+	border-radius: 24px;
 }
 
 .modal {
