--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -18,10 +18,6 @@
 		margin-left: 11px;
 	}
 
-	.section-userSign > .container > .d-flex > .slide-float-image-wrapper > img {
-		max-width: 240px;
-	}
-
 	.section-partnerSign .card {
 		max-width: 292px !important;
 	}
@@ -170,8 +166,8 @@
 		margin-bottom: 0 !important;
 	}
 	.swiper-pagination {
-		-moz-text-align-last: center;
-		text-align-last: center;
+		-moz-text-align: center;
+		text-align: center;
 	}
 	.img-under {
 		margin-top: auto;
@@ -224,9 +220,9 @@
 		margin-top: 61px !important;
 	}
 	.section-userSign > .container > .d-flex > .slide-float-image-wrapper > img {
-		width: 316px;
-		height: auto;
+		width: auto;
 		margin: 0 auto;
+		max-height: 349px;
 	}
 	.section-userSign .button-group {
 		margin: 0 auto;
