--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,6 +5,28 @@
 * Browsers: last 4 version
 */
 
+@font-face {
+	font-family: 'Roboto';
+	font-style: normal;
+	font-weight: 500;
+	src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap')
+		format('truetype');
+}
+@font-face {
+	font-family: 'Roboto';
+	font-style: normal;
+	font-weight: 700;
+	src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap')
+		format('truetype');
+}
+@font-face {
+	font-family: 'Roboto';
+	font-style: normal;
+	font-weight: 400;
+	src: url('https://fonts.googleapis.com/css2?family=Roboto&display=swap')
+		format('truetype');
+}
+
 :root {
 	--white: #ffffff;
 	--gray: #f2f2f2;
