--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -9,19 +9,22 @@
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 500;
-	src: url('src\assets\font\Roboto-Medium.ttf') format('truetype');
+	src: url('https://moveon.kz/src/assets/font/Roboto-Medium.ttf')
+		format('truetype');
 }
 @font-face {
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 700;
-	src: url('src\assets\font\Roboto-Bold.ttf') format('truetype');
+	src: url('https://moveon.kz/src/assets/font/Roboto-Bold.ttf')
+		format('truetype');
 }
 @font-face {
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 400;
-	src: url('src\assets\font\Roboto-Regular.ttf') format('truetype');
+	src: url('https://moveon.kz/src/assets/font/Roboto-Regular.ttf')
+		format('truetype');
 }
 
 :root {
